# VBx

./: .gitignore  CMakeLists.txt  CPP_LIB_SPEC.md  README.md  compile_commands.json  pyproject.toml  run_example.py
VBx/: VBx.py  diarization_lib.py  kaldi_utils.py  predict.py  vad.py  vbhmm.py
tests/: test_ahc_threshold.py  test_clusterization.py  test_cosine_similarity.py  test_diarize.py  test_linkage.py  test_merge_adjacent_labels.py  test_vad.py  test_vbhmm.py  utils.py
utils/: compare_rttm.py
vbx_lib/: .gitignore  CMakeLists.txt  THIRD_PARTY_NOTICES
vbx_lib/benchmarks/: CMakeLists.txt  benchmarks.cpp
vbx_lib/bindings/python/: bind_vbx.cpp
vbx_lib/include/vbx/: clustering.h  linalg.h  scoring.h  types.h  vbhmm.h  vbx.h
vbx_lib/src/: clustering.cpp  linalg.cpp  scoring.cpp  vbhmm.cpp  vbx.cpp
vbx_lib/tools/: vbx_cli.cpp
