[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "VBx"
version = "1.2.0"
description = "VBx: Bayesian HMM clustering of x-vector sequences for speaker diarization"
readme = "README.md"
license = { text = "Apache License, Version 2.0" }
requires-python = ">=3.12"
authors = [{ name = "F. Landini, J. Profant, M. Diez, L. Burget"}]
dependencies = [
    'numpy',
    'scipy',
    'scikit-learn',
    'numexpr',
    'fastcluster',
    'h5py',
    'onnxruntime',
    'soundfile',
    'kaldi_io',
    'torch',
    'tabulate',
    'intervaltree',
    'silero_vad',
    'torchcodec<=0.10',
]

[dependency-groups]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/pglushkov/VBx"

[tool.uv]
package = true

[tool.scikit-build]
wheel.packages = ["VBx"]
cmake.source-dir = "vbx_lib"
cmake.build-type = "Release"
cmake.args = ["-DVBX_BUILD_PYTHON_BINDINGS=ON"]
